<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('schedules', function (Blueprint $table) {
            $table->id();
            $table->foreignId('practitioner_id')->constrained('practitioners')->onDelete('cascade');
            $table->string('service_category')->nullable(); // E.g., general, specialist
            $table->string('service_type')->nullable();     // E.g., consultation, check-up
            $table->string('specialty')->nullable();         // E.g., cardiology, dermatology
            $table->boolean('active')->default(true);
            $table->string('day_of_week');
            $table->time('start_time');
            $table->time('end_time');
            // $table->integer('slot_duration')->default(15); // e.g., 15-minute slots
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('schedules');
    }
};
