<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration {
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('practitioner_telecoms', function (Blueprint $table) {
            $table->id();
            $table->foreignId('practitioner_id')->constrained('practitioners')->onDelete('cascade');
            $table->enum('system', ['phone', 'email', 'fax', 'pager', 'url', 'sms', 'other']); //type of contact
            $table->string('value'); //value of contact, like phone no. 9849123456, or email : hello@example.ccom
            $table->enum('use', ['home', 'work', 'temp', 'old', 'mobile'])->nullable();
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('practitioner_telecoms');
    }
};
